# teste_pratico_target_sistemas2

./: .gitignore  Dockerfile  README.md  pyproject.toml
teste_pratico_target_sistemas2/: questao1.py  questao2.py  questao3.py  questao4.py  questao5.py
tests/: test_questao1.py  test_questao2.py  test_questao3.py  test_questao4.py
