[tool.poetry]
name = "teste-pratico-target-sistemas"
version = "0.1.0"
description = "Respostas para o teste prático vaga de estágio da target sistemas"
authors = ["leopoldocouto <leopoldocouto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.3"
pytest = "^8.3.2"
taskipy = "^1.13.0"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
pythonpath = '.'
addopts = '-p no:warnings'

[tool.ruff]
line-length = 80

[tool.ruff.lint]
preview = true
select = ['I','F','E','W','PL','PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
lint = 'ruff check . ; ruff check . --diff'
format = 'ruff check . --fix ; ruff format .'
pre_test = 'task lint'
test = 'pytest --cov=teste_pratico_target_sistemas -vv'
post_test = 'coverage html'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
